--- a/DialogWizardLib/src/main/res/values/strings.xml
+++ b/DialogWizardLib/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="third_fragment_label">Third Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+    <string name="nullstr"/>
 </resources>
